@@ -23,6 +23,7 @@ import javax.annotation.PostConstruct;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 @ContextConfiguration(classes = TestContextConfiguration.class)
@@ -44,6 +45,12 @@ public class FunctionalTestUtils {
 
     @Value("${probate.caseworker.password}")
     private String caseworkerPassword;
+
+    @Value("${probate.solicitor.email}")
+    private String solicitorEmail;
+
+    @Value("${probate.solicitor.password}")
+    private String solicitorPassword;
 
     @Value("${evidence.management.url}")
     private String dmStoreUrl;
@@ -73,7 +80,8 @@ public class FunctionalTestUtils {
     public String getJsonFromFile(String fileName) {
         try {
             File file = ResourceUtils.getFile(this.getClass().getResource("/json/" + fileName));
-            return new String(Files.readAllBytes(file.toPath()));
+            String fileContent = new String(Files.readString(file.toPath(), StandardCharsets.UTF_8));
+            return fileContent;
         } catch (IOException e) {
             e.printStackTrace();
             return null;
@@ -100,16 +108,41 @@ public class FunctionalTestUtils {
             new Header("Content-Type", ContentType.JSON.toString()));
     }
 
+    public Headers getHeaders(String userName, String password, Integer id) {
+        String authorizationToken = serviceAuthTokenGenerator.generateClientToken(userName, password);
+        String serviceToken = serviceAuthTokenGenerator.generateServiceToken();
+
+        return Headers.headers(
+            new Header("ServiceAuthorization", serviceToken),
+            new Header("Content-Type", ContentType.JSON.toString()),
+            new Header("Authorization", "Bearer " + authorizationToken),
+            new Header("user-id", id.toString()));
+    }
+
     public Headers getHeadersWithUserId() {
         return getHeadersWithUserId(serviceToken, userId);
     }
 
     public Headers getHeadersWithUserId(String serviceToken, String userId) {
         return Headers.headers(
-            new Header("ServiceAuthorization", serviceToken),
-            new Header("Content-Type", ContentType.JSON.toString()),
-            new Header("Authorization", serviceAuthTokenGenerator.generateAuthorisation(caseworkerEmail, caseworkerPassword)),
-            new Header("user-id", userId));
+                new Header("ServiceAuthorization", serviceToken),
+                new Header("Content-Type", ContentType.JSON.toString()),
+                new Header("Authorization",
+                        serviceAuthTokenGenerator.generateAuthorisation(caseworkerEmail, caseworkerPassword)),
+                new Header("user-id", userId));
+    }
+
+    public Headers getSolicitorHeadersWithUserId() {
+        return getSolicitorHeadersWithUserId(serviceToken, userId);
+    }
+
+    private Headers getSolicitorHeadersWithUserId(String serviceToken, String userId) {
+        return Headers.headers(
+                new Header("ServiceAuthorization", serviceToken),
+                new Header("Content-Type", ContentType.JSON.toString()),
+                new Header("Authorization",
+                        serviceAuthTokenGenerator.generateAuthorisation(solicitorEmail, solicitorPassword)),
+                new Header("user-id", userId));
     }
 
     public String downloadPdfAndParseToString(String documentUrl) {
@@ -163,17 +196,6 @@ public class FunctionalTestUtils {
         return parsedText;
     }
 
-    public Headers getHeaders(String userName, String password, Integer id) {
-        String authorizationToken = serviceAuthTokenGenerator.generateClientToken(userName, password);
-        String serviceToken = serviceAuthTokenGenerator.generateServiceToken();
-
-        return Headers.headers(
-            new Header("ServiceAuthorization", serviceToken),
-            new Header("Content-Type", ContentType.JSON.toString()),
-            new Header("Authorization", "Bearer " + authorizationToken),
-            new Header("user-id", id.toString()));
-    }
-
     public String getCaseworkerUserId() {
         return getUserId(caseworkerEmail, caseworkerPassword);
     }
@@ -217,14 +239,16 @@ public class FunctionalTestUtils {
 
     public String createCaseAsCaseworker(String caseJson, String eventId) {
         String user = getCaseworkerUserId();
-        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/event-triggers/" + eventId + "/token";
+        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
+            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/event-triggers/" + eventId + "/token";
         Response startResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
             .when().get(ccdStartAsCaseworkerUrl).andReturn();
         String token = startResponse.getBody().jsonPath().get("token");
         String caseCreateJson = caseJson.replaceAll(TOKEN_PARM, token);
-        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases";
+        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
+            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases";
         Response submitResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -235,7 +259,8 @@ public class FunctionalTestUtils {
 
     public String findCaseAsCaseworker(String caseId) {
         String user = getCaseworkerUserId();
-        String ccdFindCaseUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId;
+        String ccdFindCaseUrl = coreCaseDataApiUrl + "/caseworkers/" + user
+            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId;
         Response startResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -251,7 +276,9 @@ public class FunctionalTestUtils {
 
     public String startUpdateCaseAsCaseworker(String caseId, String eventId) {
         String user = getCaseworkerUserId();
-        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/event-triggers/" + eventId + "/token";
+        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
+            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/event-triggers/" + eventId
+            + "/token";
         Response startResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -261,7 +288,8 @@ public class FunctionalTestUtils {
 
     public String continueUpdateCaseAsCaseworker(String caseJson, String caseId) {
         String user = getCaseworkerUserId();
-        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/events";
+        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
+            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/events";
         Response submitResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -275,8 +303,7 @@ public class FunctionalTestUtils {
     }
 
     public String addAttribute(String json, String attributeKey, String attributeValue) {
-        return json.replaceAll("\"applicationID\": \"603\",", "\"applicationID\": \"603\",\"" + attributeKey + "\": \"" + attributeValue + "\",");
+        return json.replaceAll("\"applicationID\": \"603\",",
+            "\"applicationID\": \"603\",\"" + attributeKey + "\": \"" + attributeValue + "\",");
     }
-
-
 }
